add attributes API
